--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -156,44 +156,56 @@
 
 
                                                 <p> Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
-                                                <p> •	При сумме депозита до 10 000$ - 30/70%, где 70%-полагается инвестору;</p>
-                                                <p> •	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
-                                                <p> •	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
+                                                <p> •	При сумме депозита до 10 000$ - комиссия составит 30% от прибыли </p>
+                                                <p> •	При сумме депозита от 10 000$ до 50 000$ - комиссия составиться 20%</p>
+                                                <p> •	При сумме депозита свыше 50 000$ - комиссия составит 10%</p>
                                                 <p> При этом, комиссионное вознаграждение должно быть переведено Инвестором на реквизиты компании GBB любым удобным доступным способом с 1 по 5 число каждого месяца, следующего за отчетным месяцем после закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
+
+
+
+
+
+
+                                                {#<p>ШАГ №1 ПОПОЛНИТЕ БРОКЕРСКИЙ СЧЕТ</p>#}
+                                                {#<p>Бесплатно переведите деньги с карты «Брокер» в личном кабинете «БКС Онлайн»</p>#}
+                                                {#<p>Через кассы БКС</p>#}
+                                                {#<p>Безналичным переводом по реквизитам со счета любого банка</p>#}
+                                                {#<p>В приложении «Мой брокер»  2,5% комиссия и лимит 100 000 рублей в месяц</p>#}
+                                                {#<p>Будьте внимательны: в других банках возможно взимание комиссии за перевод на брокерский счет компании БКС.</p>#}
+                                                {#<p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY?#}
+                                                    {#<a href="/docs/Instructions_How_to_pay_DUTY.docx" style="color: #0a6ebd"> (ссылка Как оплатить DUTY). </a>#}
+
+
+                                                {#</p>#}
+                                                {#<p> Для Варианта №2</p>#}
+                                                {#<p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут#}
+                                                    {#<a href="/admin/add/" style="color: #0a6ebd">(ссылка как пополнить баланс личного кабинета).</a> </p>#}
+                                                {#<p> Далее отправить денежные средства с личного счета в Портфель №1, нажав кнопку портфеля и указав сумму перевода. После этого, инвестированная сумма отображается в Портфеле №1-Ф.</p>#}
+                                                {#<p>Начисление доходности происходит в личный кабинет не реже 1 раза в месяц с 1-5 число месяца, следующего за отчетным. Вывести денежные средства можно сразу же через обратную форму, указав способ вывода (реквизиты).</p>#}
+                                                {#<p>Примечание: Внимание! Начисление доходности и отчетный период будут исчисляться всегда с 1-го числа месяца, независимо от даты пополнения счета.</p>#}
+                                                {#<p>При зачислении депозита, системой автоматически оплачивается членский взнос «DUTY».</p>#}
+                                                {#<p>Отчетный период наступает по истечении месяца, либо по выходу каких-либо первичных акций на рынок.</p>#}
+
+
+
+
+
+                                                    <div class="alert alert-callout alert-success"
+                                                            {#style="background-color: #e5e6e6;margin-left: 11px;margin-top: 11px;margin-right: 11px;padding-top: 11px;padding-left: 11px;padding-right: 11px;"#}
+                                                    >
+
                                                 <p> Как зарегистрироваться в Портфель №1 «Фондовый»     <a href="/docs/1.docx" style="color: #0a6ebd"> (ссылка) </a> </p>
-                                                <p>Как пополнить Портфель №2 «IPO»</p>
+                                                <p> Как пополнить Портфель №2 «IPO»</p>
                                                 <p> Для  Варианта №1 – (ссылка ШАГ № 6)</p>
-                                                <p>ШАГ №1 ПОПОЛНИТЕ БРОКЕРСКИЙ СЧЕТ</p>
-                                                <p>Бесплатно переведите деньги с карты «Брокер» в личном кабинете «БКС Онлайн»</p>
-                                                <p>Через кассы БКС</p>
-                                                <p>Безналичным переводом по реквизитам со счета любого банка</p>
-                                                <p>В приложении «Мой брокер»  2,5% комиссия и лимит 100 000 рублей в месяц</p>
-                                                <p>Будьте внимательны: в других банках возможно взимание комиссии за перевод на брокерский счет компании БКС.</p>
-                                                <p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY?
-                                                    <a href="/docs/Instructions_How_to_pay_DUTY.docx" style="color: #0a6ebd"> (ссылка Как оплатить DUTY). </a>
-
-
-                                                </p>
-                                                <p> Для Варианта №2</p>
-                                                <p> Вам необходимо пополнить лицевой счет личного кабинета в проекте GBB любым удобным для Вас способом. Как пополнить счет личного кабинета можно узнать тут
-                                                    <a href="/admin/add/" style="color: #0a6ebd">(ссылка как пополнить баланс личного кабинета).</a> </p>
-                                                <p> Далее отправить денежные средства с личного счета в Портфель №1, нажав кнопку портфеля и указав сумму перевода. После этого, инвестированная сумма отображается в Портфеле №1-Ф.</p>
-                                                <p>Начисление доходности происходит в личный кабинет не реже 1 раза в месяц с 1-5 число месяца, следующего за отчетным. Вывести денежные средства можно сразу же через обратную форму, указав способ вывода (реквизиты).</p>
-                                                <p>Примечание: Внимание! Начисление доходности и отчетный период будут исчисляться всегда с 1-го числа месяца, независимо от даты пополнения счета.</p>
-                                                <p>При зачислении депозита, системой автоматически оплачивается членский взнос «DUTY».</p>
-                                                <p>Отчетный период наступает по истечении месяца, либо по выходу каких-либо первичных акций на рынок.</p>
 
 
 
-
-
-                                                    <p>
-                                                        <button onclick="location.href='/docs/1.zip'" style="color: #f2f3f3;
+                                                <button onclick="location.href='/docs/1.zip'" style="color: #f2f3f3;
                                         background-color: #4caf50;
                                         border-color: #4caf50;" type="button" class=" btn btn-block ink-reaction btn-default-bright" >
                                                             Скачать  все инструкции одним архивом
                                                         </button>
-                                                    </p>
+                                                    </div>
 
 
 
