--- a/templates/services/ipo.html.twig
+++ b/templates/services/ipo.html.twig
@@ -148,9 +148,19 @@
 
                                                 <p>*Комиссия взимается брокером за брокерское обслуживание счета                     в размере 1,5 % от суммы депозита в месяц и 15% от суммы чистой прибыли (только при совершении успешных сделок).</p>
                                                 <p>Проект GBB оставляет за собой право удержания комиссии согласно договору и приложению к нему и распределения прибыли в  следующих пропорциях:</p>
-                                                <p>•	При сумме депозита до 10 000$ - 30/70%, где 70%-полагается инвестору;</p>
-                                                <p>•	При сумме депозита от 10 000$ до 50 000$ - 20/80%, где 80%-полагается инвестору;</p>
-                                                <p>•	При сумме депозита свыше 50 000$ - 10/90%, где 90%-полагается инвестору.</p>
+
+
+
+
+
+                                                <p>•	При сумме депозита до 10 000$ - комиссия составит 30% от прибыли </p>
+                                                <p>•	При сумме депозита от 10 000$ до 50 000$ - комиссия составит 20% от прибыли </p>
+                                                <p>•	При сумме депозита свыше 50 000$ - комиссия составит 10% от прибыли </p>
+
+
+
+
+
                                                 <p>При этом, комиссионные должны быть переведены Инвестором на реквизиты компании GBB любым удобным доступным способом не позднее 5 дней                  с момента закрытия успешных сделок. В случае нарушения сроков Инвестор несет ответственность согласно договору.</p>
                                                 <p>Как зарегистрироваться в Портфель №2 «IPO»</p>
                                                 <p>ВАРИАНТ №1</p>
@@ -215,7 +225,7 @@
 
 
 
-                                            <h3 class="text-light"><b>Основные характеристики </b></h3>
+                                            <h3 class="text-light">Основные характеристики </h3>
                                             <ul class="nav nav-pills nav-stacked nav-transparent">
                                                 <li><a href="#"><span class="badge pull-right"> до 100% - годовых </span>Доходность</a></li>
                                                 {#<li><a href="/docs/attachments.zip"><span class="badge pull-right"> zip </span>Фото</a></li>#}
