--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -227,12 +227,20 @@
                         </a>
                     </div>
                 </div>
-                <p>&copy; GlobalBigBell.com . All rights reserved.</p>
-                <div class="credits">
+                <p  style="font-size: 10px;" >&copy; GlobalBigBell.com . All rights reserved.</p>
+                <div class="credits" style="font-size: 10px;">
 
-                    © 2018 Предупреждение: Торговля финансовыми инструментами является рискованным видом деятельности и
-                    может принести не только прибыль, но и убытки. Размер возможных потерь ограничен величиной депозита.
-                    Заполняя форму регистрации на этой странице, вы соглашаетесь на обработку персональных данных.
+
+                    <p  style="font-size: 10px;">
+                        © 2018 Предупреждение: Торговля на финансовых рынках (в частности торговля с использованием маржинальных инструментов) открывает широкие возможности, и позволяет инвесторам, готовым пойти на риск, получать высокую прибыль, но при этом несет в себе потенциально высокий уровень риска получения убытков. Поэтому перед началом торговли следует всесторонне рассмотреть вопрос о приемлемости проведения подобных операций с точки зрения имеющихся финансовых ресурсов и уровня знаний.
+                    </p>
+                    <p style="font-size: 10px;">
+                       Заполняя форму регистрации на этой странице, вы соглашаетесь на обработку персональных данных. </p>
+
+
+                    <br /><br />
+
+
 
                 </div>
             </div>
