--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -888,15 +888,13 @@
 
 
 
-
-
 <div class="footer">
     <div>
         <span>
 
-        <p  style="font-size: 7px;padding-left: 400px;padding-right: 400px;">
+         <marquee style="font-size: 10px;padding-left: 400px;padding-right: 400px;">
             © 2018 Предупреждение: Торговля на финансовых рынках (в частности торговля с использованием маржинальных инструментов) открывает широкие возможности, и позволяет инвесторам, готовым пойти на риск, получать высокую прибыль, но при этом несет в себе потенциально высокий уровень риска получения убытков. Поэтому перед началом торговли следует всесторонне рассмотреть вопрос о приемлемости проведения подобных операций с точки зрения имеющихся финансовых ресурсов и уровня знаний.
-        </p>
+        </marquee>
     </div>
 </div>
 
