--- a/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
@@ -10,7 +10,7 @@
 
                     <center>
                         <p>
-                            Письмо было отправлено на dадрес Email. Он содержит ссылку активации, которую вы должны нажать, чтобы активировать свою учетную запись.
+                            Письмо было отправлено на адрес Email. Он содержит ссылку активации, которую вы должны нажать, чтобы активировать свою учетную запись.
                         </p>
                     </center>
                 </div>
