--- a/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/check_email.html.twig
@@ -12,6 +12,7 @@
                         <p>
                             Письмо было отправлено на адрес Email. Он содержит ссылку активации, которую вы должны нажать, чтобы активировать свою учетную запись.
                         </p>
+                        <p>  Если письмо с активацией долго не приходит, проверьте папку Спам  </p>
                     </center>
                 </div>
                 <center>
