--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -101,10 +101,10 @@
                 <span class="input-group-addon"></span>
                 <input type="checkbox"   autocomplete="off"     onchange="toggleCheckbox(this)">
                <i>
-                   Я принимаю условия Пользовательского соглашения и даю своё согласие http://globalbigbell.com
+                   Я принимаю условия Пользовательского соглашения и даю своё согласие https://globalbigbell.com
                    на обработку моей персональной информации на условиях, определенных Политикой конфиденциальности.
                    <a href="/docs/contract.docx" style="color:#0a6ebd ">Договор 1 </a>
-                   <a href="/docs/contract.docx" style="color:#0a6ebd ">Договор 2 </a>
+                   {#<a href="/docs/contract.docx" style="color:#0a6ebd ">Договор 2 </a>#}
                </i>
             </div>
         <div class="input-group input-group-lg form-group">
