--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -550,7 +550,8 @@
                     <!-- END SPINNERS -->
                 </div>
                 <div class="modal-footer">
-                    <a href="/docs/1.docx">Как зарегистрироваться в портфеле-инструкция</a>
+					 <a href="https://my.broker.ru/login/" class="btn  btn-success" target="_blank" > Ваш БКС брокер </a>
+                    <a href="/docs/1.docx"  class="btn btn-info"titile='Как зарегистрироваться в портфеле-инструкция'> Инструкция </a>
                     {#<button type="button" class="btn ink-reaction btn-raised btn-primary" onclick="App.Invest('IPO') " >Инвестировать</button>#}
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Ok</button>
                     {#<a href="#" class="btn btn-link">Подробней</a>#}
