--- a/templates/services/individualManagement.html.twig
+++ b/templates/services/individualManagement.html.twig
@@ -170,7 +170,7 @@
                                                 {#<p>Бесплатно переведите деньги с карты «Брокер» в личном кабинете «БКС Онлайн»</p>#}
                                                 {#<p>Через кассы БКС</p>#}
                                                 {#<p>Безналичным переводом по реквизитам со счета любого банка</p>#}
-                                                {#<p>В приложении «Мой брокер»  2,5% комиссия и лимит 100 000 рублей в месяц</p>#}
+                                                {#<p>В приложении «Мой брокер» 2,5% комиссия и лимит 100 000 рублей в месяц</p>#}
                                                 {#<p>Будьте внимательны: в других банках возможно взимание комиссии за перевод на брокерский счет компании БКС.</p>#}
                                                 {#<p>ШАГ №2 Оплатить DUTY в размере 6% от суммы депозита на реквизиты компании Global Big Bell любым удобным для Вас способом. Как оплатить DUTY?#}
                                                     {#<a href="/docs/Instructions_How_to_pay_DUTY.docx" style="color: #0a6ebd"> (ссылка Как оплатить DUTY). </a>#}
@@ -187,7 +187,9 @@
                                                 {#<p>Отчетный период наступает по истечении месяца, либо по выходу каких-либо первичных акций на рынок.</p>#}
 
 
-
+<p> Нажмите кнопку <a href="https://my.broker.ru/login/" class="btn  btn-success" target="_blank"> Ваш БКС </a> и пройдите регистрацию в брокере чтобы вступить в наш пул инвесторов и зарабатывать вместе с нами !</p>
+												<p>  Остались вопросы ? <a href="/#contact"  style="color: #0a6ebd"> контакты  </a></p>
+												 
 
 
                                                     <div class="alert alert-callout alert-success"
