--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -504,7 +504,7 @@
                     </a>
                     <!--start submenu -->
                     <ul>
-                        <li><a  target="_blank" href="/docs/1.docx" > Зарегистрироваться в Портфеле №1-Фондовый.docx </a></li>
+                        <li><a  target="_blank" href="/docs/1.docx" > Зарегистрироваться в Портфеле №1-Фондовыи.docx </a></li>
                         <li><a target="_blank" href="/docs/2.docx"  > Сгенерировать ключи в Quik.docx</a></li>
                         <li><a target="_blank" href="/docs/3.doc"  > Установка Quik.doc </a></li>
                         <li><a target="_blank" href="/docs/referral_program.docx" title="referral_program.docx"> Реферальная программа .docx</a></li>
@@ -732,6 +732,23 @@
                         </div>
                     </li>
 
+					
+					
+					<li class="tile divider-full-bleed">
+                        <div class="tile-content">
+                            <div class="tile-text">
+                                <strong>Новости</strong>
+                                 <small>Теперь вы можете пополнить любой PAYEER кошелек наличными без комиссии (0%) в Москве через авторизованный обменный пункт. Для получения инструкций перейдите 
+									 на сайт PAYEER и в меню личного кабинета "пополнить" и выберите "Наличные 0%".</small>
+                                          
+                            </div>
+                        </div>
+                    </li>
+					
+					 
+					
+					
+					
                     {#<li class="tile">#}
                         {#<a class="tile-content ink-reaction" href="#offcanvas-chat" data-toggle="offcanvas" data-backdrop="false">#}
                             {#<div class="tile-icon">#}
