--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -13,7 +13,7 @@
                                 <div class="row style-primary">
                                     <div class="col-sm-9">
                                         <div class="card-body style-default-dark">
-                                            <h2>Портфель № 2  «Роботизированная Торговля»</h2>
+                                            <h2>Портфель № 2  «Роботизированная Торговля»</h2> <b>Global Big Bell-777</b>
                                             <div class="text-default-light">
                                                 {#Posted by <a href="#">Admin</a>#} <br />
                                             </div>
@@ -76,7 +76,7 @@
 
 
 
-                                                <p>Описание</p>
+                                                <p><b>Описание</b></p>
                                                 <p><b>Портфель №2 «Роботизированная торговля» </b> создан для инвесторов, которые понимают и оценивают риски, готовые психологически к временным просадкам депозита до 10-20%, но последующим взлетам до 15-20 % в месяц, кому не страшна волатильность, и кто готов инвестировать в среднесрок             и долгосрок.</p>
 
                                                 <p>Основной инструмент в этом портфеле – роботизированная торговля, сфера применения – Валютный рынок и Криптовалютный рынок. Риски – умеренно-агрессивные и на среднесрочной  и долгосрочной дистанции дают отличный результат.</p>
@@ -93,6 +93,17 @@
                                                 <p>4. Исключение сценария потери 100 % депозита</p>
                                                 <p>5. Управляющий, который следит за роботом в режиме 24/7</p>
                                                 <p>6. В случае покупки, мы помогаем Вам в установке робота на Ваш компьютер и другая информационно-консультативная помощь</p>
+
+
+
+
+
+                                                <br />
+                                                <center>
+                                                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/IoW3Cfz8gVc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                </center>
+                                                <br />
+
                                                 <p><b>Основные характеристики</b></p>
 
 
@@ -114,7 +125,6 @@
                                                 {#да#}
                                                 {#Стратегия инвестирования#}
                                                 {#среднесрочная и долгосрочная#}
-
 
                                                 <table class="table table-bordered table-dark">
                                                     <thead>
@@ -156,7 +166,7 @@
                                                         <td>да</td>
                                                     </tr>
                                                     <tr>
-                                                        <th scope="row">6</th>
+                                                        <th scope="row">7</th>
                                                         <td>Стратегия инвестирования</td>
                                                         <td>Cреднесрочная и долгосрочная</td>
                                                     </tr>
@@ -171,13 +181,27 @@
 
                                                 <p>В Портфеле №2 «Роботизированная торговля» имеется несколько вариантов инвестирования:</p>
                                                 <p>ВАРИАНТ №1 На своем счете в брокере, копируя сделки нашего робота. При этом Вам необходимо открыть счет в брокере и подключиться по указанным нами реквизитам, завести на Ваш счет денежные средства и получать доход. В данном случае взимается комиссия за открытие лота автоматически в системе брокера.</p>
-                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №1 «Роботизированная Торговля»</p>
+                                                <p>
+
+
+
+
+                                                <div class="alert alert-callout alert-success" role="alert">
+                                                    <strong>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №1 «Роботизированная Торговля»!</strong>
+                                                   <a style="color: #0a6ebd" target="_blank" href="https://copy.forex4you.com/ru/leaders#/7097613/overview "> открыть </a>
+                                                </div>
+
+
+
+                                                </p>
+
 
                                                 <p>ВАРИАНТ №2 На нашем счете, не устанавливая робота и не разбираясь с брокерами, инструкциями по установке, подключением VPS сервера и т.д. Все за вас сделаем мы. Вам остается только наблюдать статистику и получать профит. При этом Вы оплачиваете комиссию от 10 до 30 % от суммы чистой прибыли (в зависимости от суммы депозита) на реквизиты Global Big Bell. Вывод моментально на кошелек Payeer или другими имеющимися способами, в том числе криптовалютой.</p>
                                                 <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</p>
 
-                                                <p>ВАРИАНТ №3 Купив робота по нашей партнерской программе, при этом Вы можете получать прибыль от партнеров как внутри нашего Клуба по нашей реферальной программе (ссылка Реферальная программа). Также и внутри проектов самих роботов, в некоторых из них имеется очень интересный маркетинг для тех, кто работает со своей командой.</p>
-                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №2 «Роботизированная Торговля»</p>
+                                                <p>ВАРИАНТ №3 Купив робота по нашей партнерской программе, при этом Вы можете получать прибыль от партнеров как внутри нашего Клуба по нашей реферальной программе
+                                                    <a style="color: #0a6ebd" target="_blank" href="https://globalbigbell.com/docs/referral_program.docx">(Открыть)</a>. Также и внутри проектов самих роботов, в некоторых из них имеется очень интересный маркетинг для тех, кто работает со своей командой.</p>
+                                                <p>ПРОИНВЕСТИРОВАТЬ в ВАРИАНТ №3 «Роботизированная Торговля»</p>
 
 
                                                 <p>Как зарегистрироваться в Портфель №2</p>
