--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -79,12 +79,22 @@
                                                 <p><b>Описание</b></p>
                                                 <p><b>Портфель №2 «Роботизированная торговля» </b> создан для инвесторов, которые понимают и оценивают риски, готовые психологически к временным просадкам депозита до 10-20%, но последующим взлетам до 15-20 % в месяц, кому не страшна волатильность, и кто готов инвестировать в среднесрок             и долгосрок.</p>
 
-                                                <p>Основной инструмент в этом портфеле – роботизированная торговля, сфера применения – Валютный рынок и Криптовалютный рынок. Риски – умеренно-агрессивные и на среднесрочной  и долгосрочной дистанции дают отличный результат.</p>
-                                                <p>Сейчас масса предложений с различными автоматизированными алгоритмами, однако зачастую Вы покупаете кота в мешке и не знаете, как он работает. В этой связи инвестор платит сначала за робот до 1000 долларов, а потом еще и на нем теряет свои средства, потому что не соблюдает правила работы с инструментом, а чаще просто не знает что делать, либо купил робота-«сливатора».</p>
-                                                <p>Мы протестировали множество роботов для трейдинга и предлагаем членам Клуба использовать только те, которые стабильно показали себя на продолжительном периоде работы плюс те, которые имеют максимально низкие просадки и незакрытые сделки и т.д.</p>
-                                                <p>Вы получаете возможность пользоваться роботом бесплатно и по своему усмотрению.</p>
-                                                <p>Достижение стабильного  результата возможно только при соблюдении стратегии инвестирования, поэтому если вы не готовы психологически к временным просадкам, еще раз настоятельно рекомендуем не входить в этот портфель.</p>
-                                                <p>Возможность снятия депозита в любой момент без потери процентами.</p>
+                                                {#<p>Основной инструмент в этом портфеле – роботизированная торговля, сфера применения – Валютный рынок и Криптовалютный рынок. Риски – умеренно-агрессивные и на среднесрочной  и долгосрочной дистанции дают отличный результат.</p>#}
+                                                {#<p>Сейчас масса предложений с различными автоматизированными алгоритмами, однако зачастую Вы покупаете кота в мешке и не знаете, как он работает. В этой связи инвестор платит сначала за робот до 1000 долларов, а потом еще и на нем теряет свои средства, потому что не соблюдает правила работы с инструментом, а чаще просто не знает что делать, либо купил робота-«сливатора».</p>#}
+                                                {#<p>Мы протестировали множество роботов для трейдинга и предлагаем членам Клуба использовать только те, которые стабильно показали себя на продолжительном периоде работы плюс те, которые имеют максимально низкие просадки и незакрытые сделки и т.д.</p>#}
+                                                {#<p>Вы получаете возможность пользоваться роботом бесплатно и по своему усмотрению.</p>#}
+                                                {#<p>Достижение стабильного  результата возможно только при соблюдении стратегии инвестирования, поэтому если вы не готовы психологически к временным просадкам, еще раз настоятельно рекомендуем не входить в этот портфель.</p>#}
+                                                {#<p>Возможность снятия депозита в любой момент без потери процентами.</p>#}
+
+
+
+
+
+
+                                                <p>-------------</p>
+
+
+
 
                                                 <p>Преимущества</p>
                                                 <p>1. Вам не нужно покупать робота для торговли</p>
