--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -220,11 +220,11 @@
 
 
 
-
-
-
-
-
+                                                <div class="alert alert-callout alert-success" role="alert">
+                                                    <a href="/individual_robot" class="btn btn-success btn-primary btn-labeled" style="background-color: #4caf50;">
+                                                        Разработка индивидуального робота
+                                                    </a>
+                                                </div>
 
                                             </div><!--end .card-body -->
                                         </article>
