--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -457,6 +457,17 @@
                         </td>
                     </tr>
 
+                    <tr>
+                        <th scope="row">7</th>
+                        <td> Разработка индивидуального робота</td>
+                        <td style="color:#335433;" > </td>
+                        <td>
+                            <a href="/individual_robot">Открыть</a>
+                        </td>
+                    </tr>
+
+
+
                     </tbody>
                 </table>
                 </div>
