--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -110,8 +110,24 @@
 
                                                 <br />
                                                 <center>
-                                                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/9Y3k1Lmu3Fk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                                    {#<iframe width="100%" height="315" src="https://www.youtube.com/embed/9Y3k1Lmu3Fk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>#}
+
+
+
+
+
+
+                                                <video width="100%" height="300" controls="controls" poster="video/duel.jpg">
+                                                    {#<source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>#}
+                                                    <source src="/main/tv/GlobalBigBot777_v_1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                                                    {#<source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>#}
+                                                    Тег video не поддерживается вашим браузером.
+                                                    {#<a href="https://www.youtube.com/embed/9Y3k1Lmu3Fk">Скачайте видео</a>.#}
+                                                </video>
+
                                                 </center>
+
+
                                                 <br />
 
                                                 <p><b>Основные характеристики</b></p>
