--- a/templates/services/roboticTrading.html.twig
+++ b/templates/services/roboticTrading.html.twig
@@ -117,7 +117,8 @@
 
 
 
-                                                <video width="100%" height="300" controls="controls" poster="video/duel.jpg">
+                                                <video width="100%" height="300" controls="controls">
+                                                    {#poster="video/duel.jpg"#}
                                                     {#<source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>#}
                                                     <source src="/main/tv/GlobalBigBot777_v_1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
                                                     {#<source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>#}
