--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -574,9 +574,10 @@
                         <h5>Главный офис</h5>
 
                         <address>
-                            <strong>Squas Design, Inc.</strong><br>
-                            Tower 795 Folsom Ave, Beautiful Suite 600<br>
-                            San Francisco, CA 94107<br>
+                            <strong>Адрес: Москва,</strong><br>
+                            Прокатная 7, вл. 12А, офис 229<br>
+                            Телефон: +7 (991) 310-50-24<br>
+                            Часы работы: 9 - 21, без вых.<br>
 
 
 
@@ -605,6 +606,37 @@
     </section>
     <!-- /Section: contact -->
 
+
+
+
+
+
+
+
+    {#<div id="ltBlock178105257" data-block-id="178105284" data-has-css="true" class="lt-block lt-view img03 lt-image lt-image-withtext" data-code="ltBlock178105284">#}
+        {#<div class="lt-block-wrapper">#}
+
+
+
+
+            {#<div class="container">#}
+                {#<div class="row">#}
+
+
+                    {#<div data-main-class="left-column" class="left-column col-md-5 col-md-offset-1">#}
+                        {#<div data-main-class="image" class="image ">#}
+                            {#<img  style="height: 200px" data-main-class="lt-image-common" class="lt-image-common lazyloaded" data-hash="9fcd1ff771e042c8a422620496cc0c45.jpg" data-image-editable="true" data-param="image" data-src="//fs-th02.getcourse.ru/fileservice/file/thumbnail/h/9fcd1ff771e042c8a422620496cc0c45.jpg/s/800x/a/71807/sc/142" src="//fs-th02.getcourse.ru/fileservice/file/thumbnail/h/9fcd1ff771e042c8a422620496cc0c45.jpg/s/800x/a/71807/sc/142">#}
+                            {#<div data-main-class="lt-image-caption" class="lt-image-caption" data-editable="true" data-param="image/caption"></div>#}
+                        {#</div>		</div>#}
+
+                    {#<div data-main-class="right-column" class="right-column col-md-5 col-md-offset-1">#}
+                        {#<div data-main-class="description" class="description" data-editable="true" data-param="description"><h2><strong>Станислав Прокопьев</strong></h2>#}
+                            {#<p>(ведущий мастер-класса)</p><p><br></p><ul class="ul-checks ul-checks-1"><li>100+ брокерских счетов в управлении</li><li>Опыт в инвестировании&nbsp;более 15 лет</li><li>Автор обучающих&nbsp;курсов&nbsp;по торговле на бирже</li></ul></div>#}
+                    {#</div>#}
+
+                {#</div>#}
+            {#</div>#}
+        {#</div></div>#}
 
 {% endblock %}
 
