--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -278,7 +278,10 @@
 
 
 
+
                             <li class="dropdown-header">Меню</li>
+
+                            <li><a href="/admin/doc/"><i style="color: #17b38c;" class="md md-attach-file"></i>Документы</a></li>
                             <li><a href="/profile/">Мой профиль</a></li>
                             <li><a href="/admin/">Кабинет</a></li>
                             <li><a href="/admin/verify"> <i  style=" {% if user is defined %} color: {% if user.isverify == 0 %}  #f00000; {% else %} #73b967; {% endif %} {% endif %} padding-right: 1px; padding-left: 0px; padding-bottom: 1px;" class="md md-verified-user"></i> Верификация аккаунта</a></li>
