--- a/templates/admin/admin.html.twig
+++ b/templates/admin/admin.html.twig
@@ -225,31 +225,91 @@
                             <div class="_col-md-4">
                                 <div class="card-head">
                                     <header> Инвестированые средства  </header>
+
                                 </div>
+
+
+
+
                                 <div class="card-body height-8">
 
 
 
                                     Роботизированная торговля   (валютый робот)  <strong  style="text-align: right;" id="balance-Conservative">{{ report.conservative }}</strong> USD
+
+
+
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
+
+                                    <span class="pull-right text-success text-sm">
+
+                                        <a href="/admin/statistics/1/" style="top: 11px;">
+                                            <span class="badge style-danger pull-right" style="background-color: #49a99e;">
+                                                 Статистика <i class="md md-trending-up"></i>
+                                            </span>
+                                        </a>
+
+                                    </span>
+
+
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
                                     Роботизированная торговля   (криптовалютый робот)  <strong id="balance-Optimal">{{ report.optimum }}</strong> USD
+
+
+                                    <span class="pull-right text-success text-sm">
+
+                                        <a href="/admin/statistics/2/" style="top: 11px;">
+                                            <span class="badge style-danger pull-right" style="background-color: #49a99e;">
+                                                 Статистика <i class="md md-trending-up"></i>
+                                            </span>
+                                        </a>
+
+                                    </span>
+
+
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-primary-dark" style="width:0%"></div>
                                     </div>
                                     IPO <strong id="balance-IPO">{{ report.ipo }}</strong> USD
+
+
+                                    <span class="pull-right text-success text-sm">
+
+                                        <a href="/admin/statistics/3/" style="top: 11px;">
+                                            <span class="badge style-danger pull-right" style="background-color: #49a99e;">
+                                                 Статистика <i class="md md-trending-up"></i>
+                                            </span>
+                                        </a>
+
+                                    </span>
                                     {#<span class="pull-right text-danger text-sm">0% <i class="md md-trending-down"></i></span>#}
+
+
+
+                                    {#<span class="pull-right text-success text-sm"> подробней </span>#}
+
+
+
+
+
+
                                     <div class="progress progress-hairline">
                                         <div class="progress-bar progress-bar-danger" style="width:0%"></div>
                                     </div>
+
+
                                     {#32,301 Баланс#}
                                     {#<span class="pull-right text-success text-sm">0,18% <i class="md md-trending-up"></i></span>#}
                                     {#<div class="progress progress-hairline">#}
                                         {#<div class="progress-bar progress-bar-primary-dark" style="width:63%"></div>#}
                                     {#</div>#}
+
+
+
+
                                     Свободные средства <strong id="available_funds">{{ report.available_funds  }}</strong> USD
                                     {#<span class="pull-right text-success text-sm">0% <i class="md md-trending-up"></i></span>#}
                                     <div class="progress progress-hairline">
@@ -261,9 +321,102 @@
                     </div><!--end .card -->
                 </div><!--end .col -->
                 <!-- END SITE ACTIVITY -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                {#<!-- BEGIN REGISTRATION HISTORY -->#}
+
+                    {#<div class="_col-md-9"  >#}
+                        {#<div class="card">#}
+                            {#<div class="card-head">#}
+                                {#<header>Общая статистика </header>#}
+                                {#<div class="tools">#}
+                                    {#<a class="btn btn-icon-toggle btn-refresh"><i class="md md-refresh"></i></a>#}
+                                    {#<a class="btn btn-icon-toggle btn-collapse"><i class="fa fa-angle-down"></i></a>#}
+                                    {#<a class="btn btn-icon-toggle btn-close"><i class="md md-close"></i></a>#}
+                                {#</div>#}
+                            {#</div><!--end .card-head -->#}
+                            {#<div class="card-body no-padding height-9">#}
+                                {#<div class="row">#}
+                                    {#<div class="col-sm-6 hidden-xs">#}
+                                        {#<div class="force-padding text-sm text-default-light">#}
+                                            {#<p>#}
+                                                {#<i class="md md-mode-comment text-primary-light"></i>#}
+                                                {#The registrations are measured from the time that the redesign was fully implemented and after the first e-mailing.#}
+                                            {#</p>#}
+                                        {#</div>#}
+                                    {#</div><!--end .col -->#}
+                                    {#<div class="col-sm-6">#}
+                                        {#<div class="force-padding pull-right text-default-light">#}
+                                            {#<h2 class="no-margin text-primary-dark"><span class="text-xxl">66.05%</span></h2>#}
+                                            {#<i class="fa fa-caret-up text-success fa-fw"></i> more registrations#}
+                                        {#</div>#}
+                                    {#</div><!--end .col -->#}
+                                {#</div><!--end .row -->#}
+                                {#<div class="stick-bottom-left-right force-padding">#}
+                                    {#<div id="flot-registrations" class="flot height-5" data-title="Registration history" data-color="#0aa89e"></div>#}
+                                {#</div>#}
+                            {#</div><!--end .card-body -->#}
+                        {#</div><!--end .card -->#}
+                    {#</div><!--end .col -->#}
+
+                {#<!-- END REGISTRATION HISTORY -->#}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             </div><!--end .row -->
         </div><!--end .section-body -->
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!-- Modal -->
@@ -592,5 +745,7 @@
         {#</li>#}
         {#...#}
     {#</ul>#}
+
+
 
 {% endblock %}
